# learn-rpc

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  .pre-commit-config.yaml  BUILD.bazel  Cargo.toml  README.md  WORKSPACE  go.mod  go.sum  pom.xml  settings.gradle
.github/workflows/: unittest-brpc.yaml  unittest-fbthrift.yaml  unittest-flatbuffers.yaml  unittest-folly.yaml  unittest-protobuf.yaml  unittest-thrift.yaml  unittest-wangle.yaml
tutorial/brpc/echo/cpp/: BUILD  client.cc  server.cc
tutorial/brpc/echo/idl/: BUILD  echo.proto
tutorial/fbthrift/cpp/: BUILD  observer.cc
tutorial/fbthrift/docs/: facebook.drawio
tutorial/fbthrift/echo/cpp/: BUILD  client.cc  co_client.cc  co_server.cc  echo_handler.h  server.cc
tutorial/fbthrift/echo/go/: client.go  server.go
tutorial/fbthrift/echo/idl/: BUILD  (+1 more)
tutorial/folly/catch2_main/: BUILD  TestMain.cc
tutorial/folly/thrift-impl/: Acceptor.cc  Acceptor.h  AsyncSocketHandler.cc  AsyncSocketHandler.h  BUILD  Channel.cc  Channel.h  Connection.cc  Connection.h  FrameUtils.h  Server.cc  Server.h  ServerExample.cc
tutorial/protobuf/serialize/idl/: BUILD  Cargo.toml  build.rs  types.proto
tutorial/thrift/docs/: protocol.drawio
tutorial/thrift/proxy-buffered-to-framed/: main.go  main.py
tutorial/thrift/python/: simple_client.py
tutorial/wangle/echo/: BUILD  client.cc  server.cc
tutorial/wangle/socks-proxy/: BUILD  ProxyBackendPipelineFactory.h  ProxyFrontendPipelineFactory.h  RC4Handler.h  ShadowsocksDecoder.h  server.cc  util.h
tutorial/wangle/thrift-impl/: BUILD  Server.h  ServerExample.cc
(+58 files in other folders)
